# translation-app

./: .env  .gitignore  Dockerfile  README.md  create_tables.py  pyproject.toml
app/: config.py  main.py  router.py
app/ai/: translate.py
app/auth/: auth.py
app/crud/: user.py
app/db/: database.py
app/model/: translation.py
app/models/: translation.py  user.py
app/routes/: token.py  translate.py  user.py
app/schemas/: translation.py  user.py
static/: script.js  styles.css
templates/: index.html
