[project]
name = "gg-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.53.1",
    "uvicorn>=0.35.0",
]
